tests/golden/fixtures/mode-tail-jump-external-mode-mismatch/expected.err
Error: incoming edges enter `ext_callee` with mismatched MX mode
    ╭─[ tests/golden/fixtures/mode-tail-jump-external-mode-mismatch/input.10-main.k65:21:5 ]
    │
 21 │     jmp ext_callee
    │     ───────┬──────  
    │            ╰──────── this edge enters with a8/i8
    │
    ├─[ tests/golden/fixtures/mode-tail-jump-external-mode-mismatch/input.10-main.k65:21:5 ]
    │
 17 │         jmp ext_callee
    │         ───────┬──────  
    │                ╰──────── earlier incoming edge entered with a16/i8
    │
    ├─[ tests/golden/fixtures/mode-tail-jump-external-mode-mismatch/input.20-callee.k65:1:7 ]
    │
  1 │ naked ext_callee @a16 @i16 {
    │       ─────┬────  
    │            ╰────── label declared with entry mode a16/i16
    │ 
    │ Help: switch the offending edge to a16/i16 (matching `ext_callee`'s declared entry mode) before the branch, or change `ext_callee`'s `@a*/@i*` annotation if the signature is wrong
    │ 
    │ Note: k816 statically tracks the W65C816 m/x flags through control flow; every edge into a label must agree on @a*/@i* state because the assembler picks 8- vs 16-bit operand widths against that tracked mode. Mixed entry modes would silently encode operands against the wrong width.
────╯
